[gd_scene load_steps=55 format=3 uid="uid://dv0t4qggdnd0p"]

[ext_resource type="Texture2D" uid="uid://bdoqsbfllkbn1" path="res://Assets/Sprites/with_outline/goatman.png" id="1_74qax"]
[ext_resource type="Script" uid="uid://q2t58y83ynl5" path="res://Assets/Scenes/enemy_boss.gd" id="1_gltwb"]
[ext_resource type="Script" uid="uid://bcnu8wvi0gk0" path="res://Assets/Scenes/animated_sprite_2d.gd" id="2_gltwb"]
[ext_resource type="Script" uid="uid://ngpu7vytpigl" path="res://Assets/Scripts/hitBox.gd" id="4_gltwb"]
[ext_resource type="Script" uid="uid://b1e1sf5m072ei" path="res://Assets/Scripts/hurtBox.gd" id="5_g4pa4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7rgxw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gltwb"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4pa4"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lm04"]
atlas = ExtResource("1_74qax")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kejtv"]
atlas = ExtResource("1_74qax")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jcfo"]
atlas = ExtResource("1_74qax")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t88dj"]
atlas = ExtResource("1_74qax")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wa5t"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvdmf"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko8rv"]
atlas = ExtResource("1_74qax")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e011n"]
atlas = ExtResource("1_74qax")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h8qj"]
atlas = ExtResource("1_74qax")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d11u7"]
atlas = ExtResource("1_74qax")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsapo"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21yy6"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0nj2"]
atlas = ExtResource("1_74qax")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yetpq"]
atlas = ExtResource("1_74qax")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf7lo"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_imm03"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb2r1"]
atlas = ExtResource("1_74qax")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pywx"]
atlas = ExtResource("1_74qax")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_41y1c"]
atlas = ExtResource("1_74qax")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl36d"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmlb8"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17xsk"]
atlas = ExtResource("1_74qax")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nu6a"]
atlas = ExtResource("1_74qax")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1ofl"]
atlas = ExtResource("1_74qax")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwwmr"]
atlas = ExtResource("1_74qax")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv0oa"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o36vg"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hv4b"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hscs"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h8yd"]
atlas = ExtResource("1_74qax")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_outsq"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rgxw"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yh55"]
atlas = ExtResource("1_74qax")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_em21f"]
atlas = ExtResource("1_74qax")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o003"]
atlas = ExtResource("1_74qax")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g36v"]
atlas = ExtResource("1_74qax")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shd2q"]
atlas = ExtResource("1_74qax")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_720hh"]
atlas = ExtResource("1_74qax")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wmjm"]
atlas = ExtResource("1_74qax")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_726fj"]
atlas = ExtResource("1_74qax")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1luqi"]
atlas = ExtResource("1_74qax")
region = Rect2(320, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_outsq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gltwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4pa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lm04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kejtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jcfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t88dj")
}],
"loop": false,
"name": &"attack_basic",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wa5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvdmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko8rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e011n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h8qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d11u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsapo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21yy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0nj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yetpq")
}],
"loop": false,
"name": &"attack_charge",
"speed": 15.0
}, {
"frames": [],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf7lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imm03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb2r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pywx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41y1c")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl36d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmlb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17xsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nu6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1ofl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwwmr")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv0oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o36vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hv4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hscs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h8yd")
}],
"loop": false,
"name": &"stun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_outsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rgxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yh55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em21f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o003")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g36v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shd2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_720hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wmjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_726fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1luqi")
}],
"loop": false,
"name": &"windup",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gltwb"]
radius = 5.2844048
height = 29.53846

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g4pa4"]
radius = 5.2844048
height = 40.615376

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6lm04"]
radius = 22.153847
height = 49.321114

[sub_resource type="CircleShape2D" id="CircleShape2D_o24j7"]
radius = 55.00909

[node name="Enemy_boss" type="CharacterBody2D" node_paths=PackedStringArray("nav", "sprite") groups=["enemy_boss"]]
collision_layer = 129
script = ExtResource("1_gltwb")
nav = NodePath("Nav")
sprite = NodePath("AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 18)
shape = SubResource("CapsuleShape2D_7rgxw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("enemy_boss")]
scale = Vector2(1.625, 1.703125)
sprite_frames = SubResource("SpriteFrames_outsq")
animation = &"attack_basic"
frame = 5
frame_progress = 1.0
script = ExtResource("2_gltwb")
enemy_boss = NodePath("..")

[node name="attack_basic_hitBox" type="Area2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(12.923077, 8.220183)
script = ExtResource("4_gltwb")
attack_type = "basic"
metadata/_custom_type_script = "uid://ngpu7vytpigl"

[node name="strikeShape1" type="CollisionShape2D" parent="AnimatedSprite2D/attack_basic_hitBox"]
position = Vector2(2.9343823e-06, -0.29357767)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_gltwb")

[node name="attack_charge_hitBox" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(12.307686, 7.6330276)
rotation = 1.5707964
collision_layer = 129
script = ExtResource("4_gltwb")
attack_type = "charge"
metadata/_custom_type_script = "uid://ngpu7vytpigl"

[node name="strikeShape2" type="CollisionShape2D" parent="AnimatedSprite2D/attack_charge_hitBox"]
position = Vector2(0, -0.615387)
shape = SubResource("CapsuleShape2D_g4pa4")

[node name="hurtBox" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(88.61539, 32.880733)
script = ExtResource("5_g4pa4")
metadata/_custom_type_script = "uid://b1e1sf5m072ei"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/hurtBox"]
position = Vector2(-86.76923, -21.137615)
shape = SubResource("CapsuleShape2D_6lm04")

[node name="Nav" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="attack_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]
position = Vector2(-1, 18)
shape = SubResource("CircleShape2D_o24j7")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="AnimatedSprite2D/attack_charge_hitBox" to="." method="_on_attack_charge_hit_box_area_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/attack_charge_hitBox" to="." method="_on_attack_charge_hit_box_body_entered"]
[connection signal="body_entered" from="attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="attack_range" to="." method="_on_attack_range_body_exited"]
